@@ -90,6 +90,13 @@ dark_path = "%b/%N/darks/%f"
 ; Location with target dependent informations. Default to PREFIX "/etc/rts2/targets"
 ; target_path = "/etc/rts2"
 
+; If set to true, path to constraint file will be composed from
+; target name. If false, path will include target id. The path is
+; prefixed with value of <emphasis>target_path</emphasis>, and
+; constraints are held in constraint.xml file. Please see output
+; of rts2-targetinfo -ee for details. Defaults to false.
+; target_constraints_with_name = false
+
 ; Location of night logs; if -, then night logs will not be created. Default to PREFIX "/etc/rts2/nights/%N".
 ; nightlogs = "/etc/rts2/nights"
 
